--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ nav ul li a:hover{
     color: rgba(0, 0, 0, 0.95);
 }
 
+#fire img{
+    display: inline; width: 14px; vertical-align: middle; margin-right: 4px;
+}
+
 .leftSide{
     display: flex;
     gap: 0.8em;
