--- a/style.css
+++ b/style.css
@@ -1,17 +1,34 @@
+:root{
+    --shadowColor: rgba(34, 36, 38, 0.15);
+    --navgray: #e7e7e7;
+    --navblack: rgba(0, 0, 0, 0.95);
+    --navagray:rgb(50, 50, 50);
+}
+
 body{
     margin: 0;
     font-family: IRANYekan, Tahoma, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-/*.container{*/
-/*    display: grid;*/
-/*    height: 100vh;*/
-/*}*/
+.container{
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.2fr 1.5fr 1.5fr 1.2fr 0.8fr;
+    grid-template-areas:
+            "nav nav nav"
+            "banner banner sidebar"
+            "content1 content2 sidebar"
+            "content3 content4 sidebar"
+            "footer footer footer";
+    grid-gap: 0.2rem;
+}
 
 header{
 
-    box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
-    border-bottom: 1px solid #e7e7e7;
+    box-shadow: 0 1px 2px 0 var(--shadowColor);
+    border-bottom: 1px solid var(--navgray);
+    grid-area: nav;
 }
 
 .wrapper{
@@ -24,27 +41,19 @@ header{
     justify-content: space-between;
     align-items: center;
     margin: 0;
+
 }
 
 nav{
     display: flex;
     gap: 0;
+
 }
 
 @media screen and (min-width: 768px) {
     #hamnav label, #hamburger {
         display: none;
     }
-}
-
-/*small screen transform*/
-@media screen and (max-width: 768px){
-    .items a {
-        display: block;
-        width: 100%;
-        box-sizing: border-box;
-    }
-
 }
 
 nav ul{
@@ -56,13 +65,13 @@ nav ul{
 
 nav ul li a{
     text-decoration: none;
-    color: rgb(50, 50, 50);
+    color: var(--navagray);
     font-size: 13px;
     font-weight: 550;
 }
 
 nav ul li a:hover{
-    color: rgba(0, 0, 0, 0.95);
+    color: var(--navblack);
 }
 
 #fire img{
@@ -77,4 +86,55 @@ nav ul li a:hover{
 .profileImg{
     border-radius: 50%;
     margin: 0.4em
+}
+
+.banner{
+    background-color: aqua;
+    grid-area: banner;
+}
+
+.content1{
+    background-color: aquamarine;
+    grid-area: content1;
+}
+
+.content2{
+    background-color: aquamarine;
+    grid-area: content2;
+}
+
+.content3{
+    background-color: aquamarine;
+    grid-area: content3;
+}
+
+.content4{
+    background-color: aquamarine;
+    grid-area: content4;
+}
+
+.sidebar{
+    background-color: cadetblue;
+    grid-area: sidebar;
+}
+
+footer{
+    background-color: lightcoral;
+    grid-area: footer;
+}
+
+@media only screen and (max-width: 768px){
+    .container{
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.4fr 0.8fr 2.2fr 2.2fr 2.2fr 2.2fr 2.2fr 1fr;
+        grid-template-areas:
+            "nav"
+            "banner"
+            "content1"
+            "content2"
+            "content3"
+            "content4"
+            "sidebar"
+            "footer";
+    }
 }
