--- a/style.css
+++ b/style.css
@@ -401,6 +401,15 @@ footer{
     grid-area: footer;
 }
 
+.footerCol a{
+    text-decoration: none;
+}
+
+#queraImg{
+    width: 80px;
+    height: 100px;
+}
+
 @media screen and (min-width: 768px) {
     #hamnav label, #hamburger {
         display: none;
