--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     --bodyLink: #1e70bf;
     --blueLink: #0097c9;
     --smallTextGray: #718096;
+    --footer-color-T-text:#4A5568;
+    --footer-color-text: #718096;
     --font-size-nav-a: 13px;
     --font-size-xxs: 0.65rem;
     --font-size-xs: 0.75rem;
@@ -16,6 +18,8 @@
     --font-size-lg: 1.125rem;
     --font-size-xl: 1.25rem;
     --font-size-small: 10px;
+    --font-size-ss: 12px;
+    --font-size-s: 15px;
     --font-weight-hairline: 100;
     --font-weight-thin: 200;
     --font-weight-light: 300;
@@ -27,6 +31,7 @@
 
 body{
     margin: 0;
+    padding: 0;
     font-family: Vazirmatn, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -397,17 +402,105 @@ nav ul li a:hover{
 }
 
 footer{
-    background-color: lightcoral;
     grid-area: footer;
+    margin-top: 1rem;
+    box-shadow: 0 1px 2px 0 var(--shadowColor);
+    border-top: 1px solid var(--navgray);
 }
 
-.footerCol a{
+.footerContainer {
+    max-width: 1200px;
+    margin: 1rem;
+}
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footerCol{
+    width: 10%;
+    padding: 0 2rem;
+}
+
+#queraFooterLogo{
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+}
+
+.footerCol h4{
+    font-size: var(--font-size-s);
+    font-weight: var(--font-weight-normal);
+}
+
+.footerCol ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+.footerCol ul a{
     text-decoration: none;
+    color: var(--footer-color-text);
+    font-size: var(--font-size-ss);
+}
+
+.smallSec{
+    width: 7%;
+}
+
+#footerLastSec {
+    width: 20%;
+    padding-top: 1rem;
 }
 
 #queraImg{
     width: 80px;
     height: 100px;
+}
+
+#footerLogo{
+    display: flex;
+    justify-content: center;
+}
+
+#enemad{
+    width: 80px;
+    height: 87px;
+}
+
+.parseServer{
+    font-size: var(--font-size-xxs);
+}
+
+#parsServerLogo{
+    width: 55px;
+    height: 55px;
+}
+
+#parsFirstText{
+    color: var(--footer-color-text);
+    padding: 0;
+    margin: 0;
+}
+
+#footerIcon{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1rem;
+    margin-top: 1rem;
+}
+
+#footerIcon svg{
+    color: var(--blueLink);
+}
+
+#iconText{
+    display: flex;
+    color: var(--footer-color-text);
+    font-size: var(--font-size-ss);
+    justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
