--- a/style.css
+++ b/style.css
@@ -163,13 +163,26 @@ nav ul li a:hover{
     font-weight: var(--font-weight-medium);
     justify-content: space-between;
     text-align: center;
-
+    margin-bottom: 0.5rem;
 }
 
 .collegeCard{
     box-shadow: 0 1px 2px 0 var(--shadowColor);
     border: 1px solid var(--navgray);
     border-radius: 16px;
+    width: 120px;
+    height: 70px;
+    padding: 5px;
+}
+
+.collegeCard img{
+    width: 50px;
+    height: 40px;
+}
+
+.collegeCard p{
+    font-size: var(--font-size-xs);
+    margin-top: 0;
 }
 
 .des{
@@ -177,6 +190,7 @@ nav ul li a:hover{
     font-weight: var(--font-weight-thin);
     font-size: var(--font-size-sm);
     justify-content: space-between;
+    margin-bottom: 0.5rem;
 }
 
 .desItem{
@@ -189,6 +203,7 @@ nav ul li a:hover{
     font-size: var(--font-size-xxs);
     font-weight: var(--font-weight-normal);
     gap: 0.2em;
+    margin-bottom: 2rem;
 }
 
 .collegeTag p{
@@ -203,6 +218,7 @@ nav ul li a:hover{
     font-size: var(--font-size-xs);
     font-weight: var(--font-weight-semibold);
     margin-top: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .course a{
@@ -211,12 +227,14 @@ nav ul li a:hover{
     color: white;
     border-radius: 7px;
     padding: 0.4rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+
 }
 
 .course p{
     font-size: var(--font-size-xxs);
     margin-bottom: 0;
+    margin-top: 2rem;
 }
 
 .competition{
@@ -245,8 +263,13 @@ nav ul li a:hover{
     color: var(--blueLink);
 }
 
+.setCenter{
+    margin: 2rem;
+}
+
 .more{
-    text-align: center;
+    display: flex;
+    justify-content: center;
     font-size: var(--font-size-sm);
 }
 
@@ -293,10 +316,6 @@ nav ul li a:hover{
     text-decoration: none;
 }
 
-.lmsSecondSec{
-    text-align:center;
-}
-
 .lmsThirdSec{
     border-bottom: 1px solid var(--navgray);
 }
@@ -324,13 +343,19 @@ nav ul li a:hover{
     font-size: var(--font-size-xs);
     font-weight: var(--font-weight-semibold);
     background-color: #F7FAFC;
-    /*width: 10rem;*/
     border-radius: 7px;
+    width: 80px;
+    height: 53px;
+}
+
+.exQuestionBankCard p{
+    margin: 0;
 }
 
 .exQuestionBankCard a{
     text-decoration: none;
     color: var(--blueLink);
+    margin: 0;
 }
 
 .question{
@@ -379,12 +404,14 @@ nav ul li a:hover{
 #bluePercent{
     color: var(--blueLink);
     margin-top: 1rem;
-    /*float: right;*/
+    padding: 0.5rem 0.3rem 0 0;
 }
 
 .sidebarSecSm{
     font-size: var(--font-size-xxs);
     color: var(--smallTextGray);
+    /*padding: 0;*/
+    /*margin: 0;*/
 }
 
 .sidebarSecMed{
