--- a/style.css
+++ b/style.css
@@ -144,7 +144,10 @@ nav ul li a:hover{
 .cardTopic{
     display: flex;
     margin-bottom: 0;
-    margin-right: 1rem;
+}
+
+.cardTopic img{
+    margin: 0 1rem 0 0.5rem;
 }
 
 .cardContainer{
@@ -161,7 +164,7 @@ nav ul li a:hover{
     gap: 0.1em;
     font-size: var(--font-size-sm);
     font-weight: var(--font-weight-medium);
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: center;
     margin-bottom: 0.5rem;
 }
@@ -170,9 +173,7 @@ nav ul li a:hover{
     box-shadow: 0 1px 2px 0 var(--shadowColor);
     border: 1px solid var(--navgray);
     border-radius: 16px;
-    width: 120px;
-    height: 70px;
-    padding: 5px;
+    width: 30%;
 }
 
 .collegeCard img{
@@ -189,7 +190,7 @@ nav ul li a:hover{
     display: flex;
     font-weight: var(--font-weight-thin);
     font-size: var(--font-size-sm);
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 0.5rem;
 }
 
@@ -209,7 +210,7 @@ nav ul li a:hover{
 .collegeTag p{
     background-color: var(--collegeTag);
     border-radius: 7px;
-    padding: 0.1rem;
+    padding: 0.3rem;
     margin: 0.1rem;
 }
 
@@ -344,8 +345,9 @@ nav ul li a:hover{
     font-weight: var(--font-weight-semibold);
     background-color: #F7FAFC;
     border-radius: 7px;
-    width: 80px;
-    height: 53px;
+    width: 23%;
+    height: 50px;
+    padding-top: 0.5rem;
 }
 
 .exQuestionBankCard p{
@@ -364,6 +366,7 @@ nav ul li a:hover{
     justify-content: space-between;
     background-color: #F7FAFC;
     font-size: var(--font-size-xxs);
+    padding: 0 1rem;
 }
 
 .questionTow{
@@ -410,8 +413,7 @@ nav ul li a:hover{
 .sidebarSecSm{
     font-size: var(--font-size-xxs);
     color: var(--smallTextGray);
-    /*padding: 0;*/
-    /*margin: 0;*/
+
 }
 
 .sidebarSecMed{
@@ -530,24 +532,10 @@ footer{
     justify-content: center;
 }
 
-@media screen and (min-width: 768px) {
-    #hamnav label, #hamburger {
-        display: none;
-    }
-    #resumeTopic{
-        display: none;
-    }
-
-    .cardContainer{
-        width: 410px;
-        height: 270px;
-    }
-}
-
 @media only screen and (max-width: 768px){
     .container{
         grid-template-columns: 1fr;
-        grid-template-rows: 0.4fr 0.8fr 2.2fr 2.2fr 2.2fr 2.2fr 2.2fr 1fr;
+        grid-template-rows: 2fr 0.8fr 2.2fr 2.2fr 2.2fr 2.2fr 2.2fr 1fr;
         grid-template-areas:
             "nav"
             "banner"
@@ -558,9 +546,135 @@ footer{
             "sidebar"
             "footer";
     }
-    header ul {
+    .navItems {
         display: none;
     }
 
+    .items{
+        display: flex;
+        justify-content: space-between;
+    }
 
+    .banner{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    #defBanner{
+        display: none;
+    }
+
+    #queraLogo{
+        margin-right: 7rem;
+    }
+
+    #hamburger{
+        display: none;
+    }
+
+    .hamburgerSec{
+        margin-right: 1rem;
+    }
+
+    .hamburgerSec label{
+        width: 50px;
+        height: 50px;
+    }
+
+    .cardContainer{
+        margin-left: 1rem;
+    }
+
+    .flexContainer{
+        margin-left: 1rem;
+    }
+
+    .sidebar{
+        margin-left: 1rem;
+    }
+
+    .footerCol{
+        width: 23%;
+        padding: 0;
+    }
+
+    #queraFooterLogo{
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+
+    #footerColProduct{
+        margin-right: 1rem;
+    }
+
+    #footerLastSec {
+        width: 35%;
+        margin: auto;
+    }
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 768px){
+    .container{
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 0.4fr 0.8fr 2.2fr 2.2fr 2.2fr 2.2fr 2.2fr;
+        grid-template-areas:
+            "nav nav nav"
+            "banner banner sidebar"
+            "college college sidebar"
+            "competition competition sidebar"
+            "lms lms sidebar"
+            "exQuestionBank exQuestionBank sidebar"
+            "footer footer footer";
+    }
+
+    .hamburgerSec{
+        display: none;
+    }
+
+    .leftSide{
+        margin-left: 2rem;
+    }
+
+    #phoneBanner{
+        display: none;
+    }
+
+    .sidebar{
+        margin-left: 1rem;
+        margin-right: 2rem;
+    }
+
+    #resumeTopic{
+        display: none;
+    }
+
+    .footerCol{
+        width: 20%;
+        padding: 0;
+    }
+
+    #footerLastSec{
+        width: 30%;
+        margin: auto;
+    }
+}
+
+@media only screen and (min-width: 1200px){
+
+    #phoneBanner{
+        display: none;
+    }
+
+    .cardContainer{
+        width: 410px;
+        height: 270px;
+    }
+
+    .hamburgerSec{
+        display: none;
+    }
+
+    #resumeTopic{
+        display: none;
+    }
 }
